--- a/jupyter/notebook/titanic/docs/clase_ml.tex
+++ b/jupyter/notebook/titanic/docs/clase_ml.tex
@@ -635,7 +635,7 @@ toc}{\circled{\small{\inserttocsectionnumber}}~%
             \item \textit{Ejercicio 1: extracción de datos del hundimiento del Titanic}
               \begin{enumerate}
                 \item Escriba una función que obtenga, a partir de
-                  \href{http://biostat.mc.vanderbilt.edu/wiki/pub/Main/DataSets/titanic3.csv}{http://biostat.mc.vanderbilt.edu/wiki/pub/Main/DataSets/titanic3.csv} y utilizando Pandas, el conjunto de datos de pasajeros
+                  \href{https://gist.githubusercontent.com/petobens/29825af615da09752c2817e96732215a/raw/5ad193b26e8a2b79220028f0f1520a2d868ab28e/titanic.csv}{este enlace} y utilizando Pandas, el conjunto de datos de pasajeros
                   involucrados en el hundimiento del Titanic y lo guarde en un
                   un archivo \texttt{titanic_local.csv}.$^{\dag}$
                 \item Agregue lógica de cache que reuse la copia local del
