Mark as optional the usage of litecli for airflow stocks exercise

--- a/airflow/docs/clase_airflow.tex
+++ b/airflow/docs/clase_airflow.tex
@@ -655,7 +655,7 @@ with DAG(
 \begin{frame}[fragile=singleslide]
   \frametitle{Segundo dag: insertando a db con xcoms}
   \begin{itemize}
-    \item Realicemos los siguientes pasos antes de correr el dag
+    \item Opcional: Realicemos los siguientes pasos antes de correr el dag
       \texttt{stocks_dag.py}:
       \begin{enumerate}
         \item Instalemos una cli de sqlite llamada \texttt{litecli} con \texttt{pip}:
